# drf-casbin

./: LICENSE  README.md  pyproject.toml
drf_casbin/: permissions.py
